# webDevpia.github.io

./: .gitignore  Gemfile  README.md  _config.yml  index.html  just-the-docs.gemspec  test.html
.obsidian/: workspace.json
_site/: db.html  (+22 more)
docs/10_작업중/자료파일/AN.1.1/: README.md  pyproject.toml
docs/10_작업중/자료파일/AN.1.1/.github/agents/: TDD-green.agent.md  TDD-red.agent.md
docs/10_작업중/자료파일/AN.1.1/.github/instructions/: general.instructions.md  testing.instructions.md
docs/10_작업중/자료파일/AN.1.1/.github/prompts/: new-feature.prompt.md
docs/10_작업중/자료파일/AN.1.1/docs/: CONTRIBUTING.md  PRODUCT.md
docs/10_작업중/자료파일/AN.1.1/exercises/01-orientation/: README.md
docs/10_작업중/자료파일/AN.1.1/exercises/03-copilot-customization/: README.md
docs/10_작업중/자료파일/AN.1.1/exercises/03-copilot-customization/examples/: sample.agent.md  sample.prompt.md
docs/10_작업중/자료파일/AN.1.1/exercises/04-custom-instructions/starter/: copilot-instructions.md.template
docs/10_작업중/자료파일/AN.1.1/exercises/05-prompt-files/: README.md
docs/10_작업중/자료파일/AN.1.1/exercises/05-prompt-files/starter/: new-feature.prompt.md.template  write-tests.prompt.md.template
docs/10_작업중/자료파일/AN.1.1/exercises/06-custom-agents/: README.md
docs/10_작업중/자료파일/AN.1.1/exercises/06-custom-agents/starter/: planner.agent.md.template
docs/10_작업중/자료파일/AN.1.1/exercises/08-tdd/starter/: TDD-red.agent.md.template  TDD-refactor.agent.md.template
docs/10_작업중/자료파일/AN.1.1/exercises/09-integration/solution/: ARCHITECTURE.md  PRODUCT.md
docs/10_작업중/자료파일/AN.1.1/src/todo/: __init__.py  manager.py
docs/10_작업중/자료파일/AN.1.1/tests/: test_manager.py
(+1358 files in other folders)
